--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -6,19 +6,19 @@ ifdef::context[:parent-context: {context}]
 
 = Configuring the {OperatorPlatformName} on {OCP}
 
-The platform gateway for {PlatformNameShort} enables you to manage the following {PlatformNameShort} components to form a single user interface:
+The  {Gateway} for {PlatformNameShort} enables you to manage the following {PlatformNameShort} components to form a single user interface:
 
 * {ControllerNameStart}
 * {HubNameStart}
 * {EDAName}
 * {LightspeedShortName} (This feature is disabled by default, you must opt in to use it.)
 
-Before you can deploy the platform gateway you must have {OperatorPlatformNameShort} installed in a namespace. 
+Before you can deploy the {Gateway} you must have {OperatorPlatformNameShort} installed in a namespace. 
 If you have not installed {OperatorPlatformNameShort} see xref:install-aap-operator_operator-platform-doc[Installing the {OperatorPlatformName} on {OCP}].
 
 [NOTE] 
 ====
-Platform gateway is only available under {OperatorPlatformNameShort} version 2.5. Every component deployed under {OperatorPlatformNameShort} 2.5 will also default to version 2.5.
+{GatewayStart} is only available under {OperatorPlatformNameShort} version 2.5. Every component deployed under {OperatorPlatformNameShort} 2.5 defaults to version 2.5.
 ====
 
 If you have the {OperatorPlatformNameShort} and some or all of the {PlatformNameShort} components installed see xref:operator-deploy-central-config_{context}[Deploying the platform gateway with existing {PlatformNameShort} components] for how to proceed. 
