--- a/downstream/assemblies/topologies/assembly-overview-tested-deployment-models.adoc
+++ b/downstream/assemblies/topologies/assembly-overview-tested-deployment-models.adoc
@@ -8,26 +8,27 @@ Red Hat tests {PlatformNameShort} {PlatformVers} with a defined set of topologie
 
 The following table outlines the different ways to install or deploy {PlatformNameShort}:
 
-
 .{PlatformNameShort} installation and deployment models
 [options="header"]
 |====
 | Mode | Infrastructure | Description | Tested topologies
 | RPM | Virtual machines and bare metal | The RPM installer deploys {PlatformNameShort} on {RHEL} by using RPMs to install the platform on host machines. Customers manage the product and infrastructure lifecycle.
 a| 
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/rpm-topologies#rpm-b-env-a[RPM enterprise topology]
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/rpm-topologies#rpm-b-env-b[RPM mixed enterprise topology]
+* link:{URLTopologies}/rpm-topologies#rpm-a-env-a[RPM growth topology]
+* link:{URLTopologies}/rpm-topologies#rpm-a-env-b[RPM mixed growth topology]
+* link:{URLTopologies}/rpm-topologies#rpm-b-env-a[RPM enterprise topology]
+* link:{URLTopologies}/rpm-topologies#rpm-b-env-b[RPM mixed enterprise topology]
 | Containers
 | Virtual machines and bare metal
 | The containerized installer deploys {PlatformNameShort} on {RHEL} by using Podman which runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.
 a| 
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/container-topologies#cont-a-env-a[Container growth topology]
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/container-topologies#cont-b-env-a[Container enterprise topology]
+* link:{URLTopologies}/container-topologies#cont-a-env-a[Container growth topology]
+* link:{URLTopologies}/container-topologies#cont-b-env-a[Container enterprise topology]
 
 | Operator
 | Red Hat OpenShift
 | The Operator uses Red Hat OpenShift Operators to deploy {PlatformNameShort} within Red Hat OpenShift. Customers manage the product and infrastructure lifecycle.
 a| 
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/ocp-topologies#ocp-a-env-a[Operator growth topology]
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/ocp-topologies#ocp-b-env-a[Operator enterprise topology] 
+* link:{URLTopologies}/ocp-topologies#ocp-a-env-a[Operator growth topology]
+* link:{URLTopologies}/ocp-topologies#ocp-b-env-a[Operator enterprise topology] 
 |====
