--- a/downstream/modules/platform/con-operator-upgrade-considerations.adoc
+++ b/downstream/modules/platform/con-operator-upgrade-considerations.adoc
@@ -2,11 +2,9 @@
 
 = Upgrade considerations
 
+If you are upgrading from version 2.4, continue to the xref:upgrading-operator_{context}[Upgrading the {OperatorPlatformNameShort}].
 
-[role="_abstract"]
-{PlatformName} version 2.0 was the first release of the {OperatorPlatformNameShort}. If you are upgrading from version 2.0, continue to the xref:upgrading-operator_operator-upgrade[Upgrading the {OperatorPlatformNameShort}] procedure.
-
-If you are using a version of {OCPShort} that is not supported by the version of {PlatformName} to which you are upgrading, you must upgrade your {OCPShort} cluster to a supported version before upgrading.
+If your {OCPShort} version is not supported by the {PlatformName} version you are upgrading to, you must upgrade your {OCPShort} cluster to a supported version first.
 
 Refer to the link:https://access.redhat.com/support/policy/updates/ansible-automation-platform[Red Hat Ansible Automation Platform Life Cycle] to determine the {OCPShort} version needed.
 
