--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -46,7 +46,7 @@ spec:
 ----
 .. For new components, if you do not specify a name, a default name is generated.
 . Click btn:[Create].
-. To access your new instance, see <<Accessing the platform gateway>>.
+. To access your new instance, see xref:operator-access-aap_{context}[Accessing the platform gateway].
 
 [NOTE]
 ====
