--- a/downstream/modules/platform/proc-operator-upgrade.adoc
+++ b/downstream/modules/platform/proc-operator-upgrade.adoc
@@ -2,15 +2,27 @@
 
 = Upgrading the {OperatorPlatformNameShort}
 
+To upgrade to the latest version of {OperatorPlatformNameShort} on {OCPShort}, you can do the following:
 
-[role=_abstract]
+.Prerequisites 
 
-To upgrade to the latest version of {OperatorPlatformNameShort} on {OCPShort}, do the following:
+* Read the link:{URLReleaseNotes}[{TitleReleaseNotes}] for 2.5 
+
+* [Optional] You need to deploy all of your {PlatformName} services ({ControllerNAme}, {HubName}, {EDAName}) to the same, single namespace before upgrading to 2.5 (only for existing deployments). For more information see, link:https://access.redhat.com/solutions/7092056[Migrating from one namespace to another].
+* Review the link:{URLOperatorBackup}[{TitleOperatorBackup}] guide and backup your services:
+** AutomationControllerBackup
+** AutomationHubBackup
+** EDABackup 
 
 .Prodedure
 . Log in to {OCPShort}.
 . Navigate to menu:Operators[Installed Operators].
+. Select the {OperatorPlatformNameShort} installed on your project namespace.
 . Select the *Subscriptions* tab.
-. Under *Upgrade status*, click btn:[Upgrade Available].
+. Change the channel from stable-2.4 to stable-2.5. An InstallPlan is created for the user.
 . Click btn:[Preview InstallPlan].
 . Click btn:[Approve].
+. Create a Custom Resource (CR) using the {PlatformNameShort} UI.
+The {ControllerName} and {HubName} UIs remain until all SSO configuration is supported in the platform gateway UI.
+
+For more information on configuring your updated {OperatorPlatformNameShort}, see xref:configure-aap-operator_operator-platform-doc[Configuring the {OperatorPlatformName} on {OCP}].
