--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -61,6 +61,9 @@ Default = `ansible-automation-platform-25`
 | |`registry_ns_rhel` |RHEL registry namespace.
 
 Default = `rhel8`
+| `redis_mode` | | Redis can be colocated with automationgateway, automationhub, and automationedacontroller nodes. 
+
+Default = cluster
 | `registry_password` |`registry_password` | This variable is only required if a non-bundle installer is used.
 
 Password credential for access to `registry_url`.
