--- a/downstream/modules/platform/proc-create-postresql-secret.adoc
+++ b/downstream/modules/platform/proc-create-postresql-secret.adoc
@@ -8,7 +8,7 @@ For migration to be successful, you must provide access to the database for your
 
 .Procedure
 
-. Create a yaml file for your postgresql configuration secret:
+. Create a YAML file for your postgresql configuration secret:
 +
 -----
 apiVersion: v1
