--- a/downstream/modules/platform/proc-create-secret-key-secret.adoc
+++ b/downstream/modules/platform/proc-create-secret-key-secret.adoc
@@ -4,23 +4,31 @@
 
 [role=_abstract]
 
-To migrate your data to {OperatorPlatformNameShort} on {OCPShort}, you must create a secret key that matches the secret key defined in the inventory file during your initial installation. Otherwise, the migrated data will remain encrypted and unusable after migration.
+To migrate your data to {OperatorPlatformNameShort} on {OCPShort}, you must create a secret key that matches the secret key defined in the inventory file during your initial installation.
+Otherwise, the migrated data remains encrypted and unusable after migration.
 
 .Procedure
 
 . Locate the old secret key in the inventory file you used to deploy {PlatformNameShort} in your previous installation.
-. Create a yaml file for your secret key:
+. Create a YAML file for your secret key:
 +
 -----
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <resourcename>-secret-key
+  name: <resourcename>-admin-password
   namespace: <target-namespace>
 stringData:
-  secret_key: <old-secret-key>
+  password: mysuperlongpassword
 type: Opaque
 -----
++
+[NOTE]
+====
+If `admin_password_secret` is not provided, the operator looks for a secret named `<resourcename>-admin-password` for the admin password.
+If it is not present, the operator generates a password and create a secret from it named `<resourcename>-admin-password`.
+====
++
 . Apply the secret key yaml to the cluster:
 +
 -----
