--- a/downstream/modules/platform/proc-post-migration-cleanup.adoc
+++ b/downstream/modules/platform/proc-post-migration-cleanup.adoc
@@ -11,7 +11,9 @@ After your data migration is complete, you must delete any Instance Groups that 
 +
 [NOTE]
 ====
-Note: If you did not create an administrator password during migration, one was automatically created for you. To locate this password, go to your project, select menu:Workloads[Secrets] and open controller-admin-password. From there you can copy the password and paste it into the {PlatformName} password field.
+If you did not create an administrator password during migration, one was automatically created for you.
+To locate this password, go to your project, select menu:Workloads[Secrets] and open controller-admin-password.
+From there you can copy the password and paste it into the {PlatformName} password field.
 ====
 +
 . Select {MenuInfrastructureInstanceGroups}.
