--- a/downstream/modules/platform/proc-verify-network-connectivity.adoc
+++ b/downstream/modules/platform/proc-verify-network-connectivity.adoc
@@ -11,7 +11,7 @@ Take note of the host and port information from your existing deployment. This i
 
 .Procedure
 
-. Create a yaml file to verify the connection between your new deployment and your old deployment database:
+. Create a YAML file to verify the connection between your new deployment and your old deployment database:
 +
 -----
 apiVersion: v1
