--- a/downstream/assemblies/platform/assembly-aap-migration.adoc
+++ b/downstream/assemblies/platform/assembly-aap-migration.adoc
@@ -10,10 +10,16 @@ ifdef::context[:parent-context: {context}]
 
 Migrating your {PlatformName} deployment to the {OperatorPlatformNameShort} allows you to take advantage of the benefits provided by a Kubernetes native operator, including simplified upgrades and full lifecycle support for your {PlatformName} deployments.
 
+[NOTE]
+====
+Upgrades of {EDAName} version 2.4 to 2.5 are not supported. Database migrations between {EDAName} 2.4 and {EDAName} 2.5 are not compatible.
+====
+
 Use these procedures to migrate any of the following deployments to the {OperatorPlatformNameShort}:
 
-* A VM-based installation of Ansible Tower 3.8.6, {ControllerName}, or {HubName}
-* An Openshift instance of Ansible Tower 3.8.6 ({PlatformNameShort} 1.2)
+* OpenShift cluster A to OpenShift cluster B
+* OpenShift namespace A to OpenShift namespace B
+* Virtual machine (VM) based or containerized VM {PlatformNameShort} 2.5 → {PlatformNameShort} 2.5
 
 include::platform/con-aap-migration-considerations.adoc[leveloffset=+1]
 include::platform/con-aap-migration-prepare.adoc[leveloffset=+1]
@@ -24,6 +30,7 @@ include::platform/proc-verify-network-connectivity.adoc[leveloffset=+2]
 include::platform/proc-aap-migration.adoc[leveloffset=+1]
 include::platform/proc-aap-create_controller.adoc[leveloffset=+2]
 include::platform/proc-aap-create_hub.adoc[leveloffset=+2]
+include::platform/proc-aap-create_eda.adoc[leveloffset=+2]
 include::platform/proc-post-migration-cleanup.adoc[leveloffset=+1]
 
 
