--- a/downstream/assemblies/platform/assembly-install-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-install-aap-operator.adoc
@@ -1,11 +1,9 @@
 
-
 ifdef::context[:parent-context: {context}]
 
-
-
 [id="install-aap-operator_{context}"]
-= Installing the {PlatformName} on {OCP}
+
+= Installing the {OperatorPlatformName} on {OCP}
 
 [role="_abstract"]
 
