--- a/downstream/assemblies/platform/assembly-installing-aap-operator-cli.adoc
+++ b/downstream/assemblies/platform/assembly-installing-aap-operator-cli.adoc
@@ -1,14 +1,6 @@
-// Used in
-// titles/aap-operator-installation/
-////
-Retains the context of the parent assembly if this assembly is nested within another assembly.
-For more information about nesting assemblies, see: https://redhat-documentation.github.io/modular-docs/#nesting-assemblies
-See also the complementary step on the last line of this file.
-////
-
 ifdef::context[:parent-context: {context}]
 
-[id="installing-aap-operator-cli_{Context}"]
+[id="installing-aap-operator-cli_{context}"]
 = Installing {OperatorPlatformName} from the {OCPShort} CLI
 
 :context: installing-aap-operator-cli
