--- a/downstream/assemblies/platform/assembly-operator-upgrade.adoc
+++ b/downstream/assemblies/platform/assembly-operator-upgrade.adoc
@@ -9,13 +9,14 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-The {OperatorPlatformNameShort} simplifies the installation, upgrade and deployment of new {PlatformName} instances in your {OCPShort} environment.
+The {OperatorPlatformNameShort} simplifies the installation, upgrade, and deployment of new {PlatformName} instances in your {OCPShort} environment.
 
+include::platform/con-operator-upgrade-overview.adoc[leveloffset=+1]
 include::platform/con-operator-upgrade-considerations.adoc[leveloffset=+1]
 include::platform/con-operator-upgrade-prereq.adoc[leveloffset=+1]
+include::platform/con-operator-channel-upgrade.adoc[leveloffset=+1]
 include::platform/proc-operator-upgrade.adoc[leveloffset=+1]
-
-
+include::platform/proc-operator-create_crs.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
