--- a/downstream/assemblies/topologies/assembly-rpm-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-rpm-topologies.adoc
@@ -4,6 +4,12 @@
 
 The RPM installer deploys {PlatformNameShort} on {RHEL} by using RPMs to install the platform on host machines. Customers manage the product and infrastructure lifecycle.
 
+//RPM growth topology
+include::topologies/ref-rpm-a-env-a.adoc[leveloffset=+1]
+
+//RPM mixed growth topology
+include::topologies/ref-rpm-a-env-b.adoc[leveloffset=+1]
+
 //RPM enterprise topology
 include::topologies/ref-rpm-b-env-a.adoc[leveloffset=+1]
 
