--- a/downstream/modules/platform/con-aap-migration-considerations.adoc
+++ b/downstream/modules/platform/con-aap-migration-considerations.adoc
@@ -4,4 +4,6 @@
 
 
 [role="_abstract"]
-If you are upgrading from {PlatformNameShort} 1.2 on {OCPShort} 3 to {PlatformNameShort} 2.x on {OCPShort} 4, you must provision a fresh {OCPShort} version 4 cluster and then migrate the {PlatformNameShort} to the new cluster. 
+If you are upgrading from any version of {PlatformNameShort} older than 2.4, you must upgrade through {PlatformNameShort} first.
+If you are on {OCPShort} 3 and you want to upgrade to {OCPShort} 4, you must provision a fresh {OCPShort} version 4 cluster and then migrate the {PlatformNameShort} to the new cluster.
+
