--- a/downstream/modules/platform/con-ocp-supported-install.adoc
+++ b/downstream/modules/platform/con-ocp-supported-install.adoc
@@ -1,11 +1,11 @@
-[id="con-ocp-supported-install_{context}"]
+[id="ocp-supported-install_{context}"]
 
 = Supported installation scenarios for {OCP}
 
 
 You can use the OperatorHub on the {OCP} web console to install {OperatorPlatformNameShort}.
 
-Alternatively, you can install {OperatorPlatformNameShort} from the {OCPShort} command-line interface (CLI), `oc`. See xref:installing-aap-operator-cli_operator-platform-doc[Installing {OperatorPlatformName}  from the {OCPShort} CLI] for help with this. 
+Alternatively, you can install {OperatorPlatformNameShort} from the {OCPShort} command-line interface (CLI), `oc`. See xref:installing-aap-operator-cli_operator-platform-doc[Installing {OperatorPlatformName} from the {OCPShort} CLI] for help with this. 
 
 After you have installed {OperatorPlatformNameShort} you must create an *{PlatformNameShort}* custom resource (CR). This enables you to manage {PlatformNameShort} components from a single unified interface known as the platform gateway. As of version 2.5, you must create an {PlatformNameShort} CR, even if you have an existing {ControllerName},  {HubName}, or {EDAName}, components.
 
