--- a/downstream/modules/platform/proc-aap-migration-backup.adoc
+++ b/downstream/modules/platform/proc-aap-migration-backup.adoc
@@ -1,7 +1,7 @@
 [id="aap-migration-backup"]
 [role="_abstract"]
 
-= Migrating to Ansible Automation Platform Operator
+= Migrating to {OperatorPlatformNameShort}
 
 .Prerequisites
 
@@ -18,21 +18,9 @@ You can store the secret key information in the inventory file before the initia
 If you are unable to remember your secret key or have trouble locating your inventory file, contact link:https://access.redhat.com/[Ansible support] through the Red Hat Customer portal.
 ====
 
-Before migrating your data from {PlatformNameShort} 2.x or earlier, you must back up your data for loss prevention. To backup your data, do the following:
+Before migrating your data from {PlatformNameShort} 2.4, you must back up your data for loss prevention.
 
 .Procedure
+
 . Log in to your current deployment project.
-. Run `setup.sh` to create a backup of your current data or deployment:
-+
-For on-prem deployments of version 2.x or earlier:
-+
------
-$ ./setup.sh -b
------
-+
-For OpenShift deployments before version 2.0 (non-operator deployments):
-+
------
-./setup_openshift.sh -b
------
-//reminder - add a cross reference statement to new Backup and Restore doc once published. "For Openshift Operator installations for version 2.0 and later, refer to"
+. Run `$ ./setup.sh -b` to create a backup of your current data or deployment.
