--- a/downstream/modules/platform/proc-aap-migration.adoc
+++ b/downstream/modules/platform/proc-aap-migration.adoc
@@ -4,4 +4,4 @@
 
 [role=_abstract]
 
-After you have set your secret key, postgresql credentials, verified network connectivity and installed the {OperatorPlatformNameShort}, you must create a custom resource controller object before you can migrate your data.
+After you have set your secret key, postgresql credentials, verified network connectivity, and installed the {OperatorPlatformNameShort}, you must create a custom resource controller object before you can migrate your data.
