--- a/downstream/modules/platform/proc-choosing-obtaining-installer.adoc
+++ b/downstream/modules/platform/proc-choosing-obtaining-installer.adoc
@@ -13,14 +13,16 @@ Choose the {PlatformName} installer you need based on your {RHEL} environment in
 A valid Red Hat customer account is required to access {PlatformName} installer downloads on the Red Hat Customer Portal.
 ====
 
-.Installing with internet access
+== Installing with internet access
 
 Choose the {PlatformName} installer if your {RHEL} environment is connected to the internet. Installing with internet access retrieves the latest required repositories, packages, and dependencies. Choose one of the following ways to set up your {PlatformNameShort} installer.
 
 *Tarball install*
 
+.Procedure
+
 . Navigate to the link:{PlatformDownloadUrl}[{PlatformName} download] page.
-. Click btn:[Download Now] for the *Ansible Automation Platform <latest-version> Setup*.
+. In the *Product software* tab, click btn:[Download Now] for the *Ansible Automation Platform <latest-version> Setup*.
 . Extract the files:
 +
 -----
@@ -29,31 +31,36 @@ $ tar xvzf ansible-automation-platform-setup-<latest-version>.tar.gz
 
 *RPM install*
 
-. Install {PlatformNameShort} Installer Package
-+
-v.{PlatformVers} for RHEL 8 for x86_64
-+
-----
-$ sudo dnf install --enablerepo=ansible-automation-platform-2.4-for-rhel-8-x86_64-rpms ansible-automation-platform-installer
-----
-+
-v.{PlatformVers} for RHEL 9 for x86-64
-+
-----
-$ sudo dnf install --enablerepo=ansible-automation-platform-2.4-for-rhel-9-x86_64-rpms ansible-automation-platform-installer
-----
+.Procedure
 
+. Install the {PlatformNameShort} Installer Package.
++
+v.{PlatformVers} for RHEL 8 for x86_64:
++
+----
+$ sudo dnf install --enablerepo=ansible-automation-platform-2.5-for-rhel-8-x86_64-rpms ansible-automation-platform-installer
+----
++
+v.{PlatformVers} for RHEL 9 for x86-64:
++
+----
+$ sudo dnf install --enablerepo=ansible-automation-platform-2.5-for-rhel-9-x86_64-rpms ansible-automation-platform-installer
+----
 [NOTE]
+====
 `dnf install` enables the repo as the repo is disabled by default.
+====
 
 When you use the RPM installer, the files are placed under the `/opt/ansible-automation-platform/installer` directory.
 
-.Installing without internet access
+== Installing without internet access
 
 Use the {PlatformName} *Bundle* installer if you are unable to access the internet, or would prefer not to install separate components and dependencies from online repositories. Access to {RHEL} repositories is still needed. All other dependencies are included in the tar archive.
 
+.Procedure
+
 . Navigate to the link:{PlatformDownloadUrl}[{PlatformName} download] page.
-. Click btn:[Download Now] for the *Ansible Automation Platform <latest-version> Setup Bundle*.
+. In the *Product software* tab, click btn:[Download Now] for the *Ansible Automation Platform <latest-version> Setup Bundle*.
 . Extract the files:
 +
 -----
