--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -22,7 +22,7 @@ To use the example inventory files, replace the `< >` placeholders with your spe
 
 == Inventory file for online installation for containerized growth topology (all-in-one)
 
-Use the following example inventory file to perform an online installation for the containerized growth topology (all-in-one):
+Use the example inventory file to perform an online installation for the containerized growth topology (all-in-one):
 
 [source,yaml,subs="+attributes"]
 ----
@@ -101,7 +101,7 @@ eda_pg_password=<set your own>
 
 == Inventory file for online installation for containerized enterprise topology
 
-Use the following example inventory file to perform an online installation for the containerized enterprise topology:
+Use the example inventory file to perform an online installation for the containerized enterprise topology:
 
 [source,yaml,subs="+attributes"]
 ----
