--- a/downstream/modules/topologies/ref-ocp-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-a-env-a.adoc
@@ -1,10 +1,10 @@
 [id="ocp-a-env-a"]
 = Operator growth topology
 
-The growth topology is intended for organizations that do not require {PlatformNameShort} to be deployed with redundancy or higher compute for large volumes of automation.
+The growth topology is intended for organizations that are getting started with {PlatformNameShort} and do not require redundancy or higher compute for large volumes of automation. This topology allows for smaller footprint deployments.
 
 == Infrastructure topology
-The following diagram outlines the infrastructure topology that Red Hat has tested with the respective deployment model that customers may use when self-managing {PlatformNameShort}:
+The following diagram outlines the infrastructure topology that Red{nbsp}Hat has tested with this deployment model that customers can use when self-managing {PlatformNameShort}:
 
 .Infrastructure topology diagram
 image::ocp-a-env-a.png[Operator growth topology diagram]
@@ -15,25 +15,25 @@ A Single Node OpenShift (SNO) cluster has been tested with the following require
 [options="header"]
 |====
 | Count | Component 
-| 1 | Automation controller web Pod
-| 1 | Automation controller task Pod
-| 1 | Automation hub API Pod 
-| 2 | Automation hub content Pod
-| 2 | Automation hub worker Pod
-| 1 | Automation hub redis Pod
-| 1 | Event-Driven Ansible API Pod
-| 1 | Event-Driven Ansible activation worker Pod
-| 1 | Event-Driven Ansible default worker Pod
-| 1 | Event-Driven Ansible event stream Pod
-| 1 | Event-Driven Ansible scheduler Pod
-| 1 | Platform gateway Pod
-| 1 | Database Pod
-| 1 | Redis Pod
+| 1 | {ControllerNameStart} web pod
+| 1 | {ControllerNameStart} task pod
+| 1 | {HubNameStart} API pod 
+| 2 | {HubNameStart} content pod
+| 2 | {HubNameStart} worker pod
+| 1 | {HubNameStart} Redis pod
+| 1 | {EDAName} API pod
+| 1 | {EDAName} activation worker pod
+| 1 | {EDAName} default worker pod
+| 1 | {EDAName} event stream pod
+| 1 | {EDAName} scheduler pod
+| 1 | {GatewayStart} pod
+| 1 | Database pod
+| 1 | Redis pod
 |====
 
 == Tested system configurations
 
-Red Hat has tested the following configurations to install and run {PlatformName}:
+Red{nbsp}Hat has tested the following configurations to install and run {PlatformName}:
 
 .Tested system configurations
 [options="header"]
@@ -72,27 +72,27 @@ spec:
 
 == Nonfunctional requirements
 
-{PlatformNameShort}’s performance characteristics and capacity are impacted by its resource allocation and configuration. With OpenShift, each {PlatformNameShort} component is deployed as a pod. You can specify resource requests and limits for each pod. 
+{PlatformNameShort}'s performance characteristics and capacity are impacted by its resource allocation and configuration. With OpenShift, each {PlatformNameShort} component is deployed as a pod. You can specify resource requests and limits for each pod. 
 
-The {PlatformNameShort} custom resource allows you to configure resource allocation for OpenShift installations. Each configurable item has default settings. These settings are the minimum requirements for an installation, but may not meet your production workload needs. 
+Use the {PlatformNameShort} Custom Resource (CR) to configure resource allocation for OpenShift installations. Each configurable item has default settings. These settings are the minimum requirements for an installation, but might not meet your production workload needs. 
 
-By default, each component’s deployments are set for minimum resource requests but no resource limits. OpenShift only schedules the pods with available resource requests, but the pods are allowed to consume unlimited RAM or CPU as long as the OpenShift worker node itself is not under node pressure.
+By default, each component's deployments are set for minimum resource requests but no resource limits. OpenShift only schedules the pods with available resource requests, but the pods are allowed to consume unlimited RAM or CPU provided that the OpenShift worker node itself is not under node pressure.
 
-In the reference topology provided in this document, {PlatformNameShort} is deployed on a Single Node OpenShift (SNO) with 32 GB RAM, 16 CPUs, 128 GB Local disk, and 3000 IOPS. This is not a shared environment, so {PlatformNameShort} pods have full access to all of the compute resources of the OpenShift SNO. In this scenario, the capacity calculation for the automation controller task pods is derived from the underlying OCP node that runs the pod. It does not have access to the entire node. This capacity calculation influences how many concurrent jobs {ControllerName} can run. 
+In the Operator growth topology, {PlatformNameShort} is deployed on a Single Node OpenShift (SNO) with 32 GB RAM, 16 CPUs, 128 GB Local disk, and 3000 IOPS. This is not a shared environment, so {PlatformNameShort} pods have full access to all of the compute resources of the OpenShift SNO. In this scenario, the capacity calculation for the {ControllerName} task pods is derived from the underlying {OCPShort} node that runs the pod. It does not have access to the entire node. This capacity calculation influences how many concurrent jobs {ControllerName} can run. 
 
-OpenShift manages storage distinctly from VMs. This impacts how {HubName} stores its artifacts. In the reference topology provided in this document, we use s3 storage because  {HubName} requires a `ReadWriteMany` type storage, which is not a default storage type in OpenShift.
+OpenShift manages storage distinctly from VMs. This impacts how {HubName} stores its artifacts. In the Operator growth topology, we use S3 storage because {HubName} requires a `ReadWriteMany` type storage, which is not a default storage type in OpenShift.
 
 == Network ports
 
-{PlatformName} uses several ports to communicate with its services. These ports must be open and available for incoming connections to the {PlatformName} server in order for it to work. Ensure that these ports are available and are not blocked by the server firewall.
+{PlatformName} uses several ports to communicate with its services. These ports must be open and available for incoming connections to the {PlatformName} server for it to work. Ensure that these ports are available and are not blocked by the server firewall.
 
 .Network ports and protocols
 [options="header"]
 |====
 | Port number | Protocol | Service | Source | Destination
-| 27199 | TCP | Receptor | OCP cluster | Execution node
-| 27199 | TCP | Receptor | OCP cluster | Hop node
-| 443 | HTTPS | Receptor | Execution node | OCP ingress
-| 443 | HTTPS | Receptor | Hop node | OCP ingress
-| 443 | HTTPS | Platform | Customer clients | OCP ingress
+| 27199 | TCP | Receptor | {OCPShort} cluster | Execution node
+| 27199 | TCP | Receptor | {OCPShort} cluster | Hop node
+| 443 | HTTPS | Receptor | Execution node | {OCPShort} ingress
+| 443 | HTTPS | Receptor | Hop node | {OCPShort} ingress
+| 443 | HTTPS | Platform | Customer clients | {OCPShort} ingress
 |====
