updates to upgrade/migration guide

--- a/downstream/modules/platform/con-aap-upgrades.adoc
+++ b/downstream/modules/platform/con-aap-upgrades.adoc
@@ -4,11 +4,12 @@
 
 = {PlatformNameShort} upgrades
 
-Upgrading to version {PlatformVers} from {PlatformNameShort} 2.1 or later involves downloading the installation package and then performing the following steps:
+Upgrading {PlatformNameShort} {PlatformVers}  involves downloading the installation package and then performing the following steps:
 
-* Set up your inventory to match your installation environment.
+* Set up your inventory to match your installation environment. See {LinkTopologies} for a list of example inventory files. 
 * Run the {PlatformVers} installation program over your current {PlatformNameShort} installation.
 
+// [hherbly]: not sure we need the addt'l resources block? the xref goes to the next section of the document.
 [role="_additional-resources"]
 .Additional resources
-* <<aap-upgrading-platform,Upgrading to {PlatformName} {PlatformVers}>>
+* xref:platform/assembly-aap-upgrading-platform[Upgrading to {PlatformName} {PlatformVers}]
