updates to upgrade guide content plus added a new procedure

--- a/downstream/modules/platform/con-aap-upgrade-planning.adoc
+++ b/downstream/modules/platform/con-aap-upgrade-planning.adoc
@@ -21,6 +21,6 @@ Before you begin the upgrade process, review the following considerations to pla
 [role="_additional-resources"]
 .Additional resources
 * link:{URLCentralAuth}/assembly-gateway-licensing#proc-attaching-subscriptions[Attaching a subscription]
-* xref:{TBA}[Backup and restore]
+* xref:platform/con-backup-aap.adoc[Backup and restore]
 * link:{URLControllerAdminGuide}/controller-clustering[Clustering]
 
