--- a/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
+++ b/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
@@ -23,6 +23,7 @@ include::platform/proc-run-jobs-on-execution-nodes.adoc[leveloffset=+1]
 include::platform/proc-connecting-nodes-through-mesh-ingress.adoc[leveloffset=+1]
 include::platform/proc-pulling-the-secret.adoc[leveloffset=+1]
 include::platform/ref-removing-instances.adoc[leveloffset=+1]
+include::platform/proc-operator-mesh-upgrading-receptors.adoc[leveloffset=+1]
 
 
 
