--- a/downstream/titles/aap-operator-installation/master.adoc
+++ b/downstream/titles/aap-operator-installation/master.adoc
@@ -43,8 +43,9 @@ include::platform/assembly-using-rhsso-operator-with-automation-hub.adoc[levelof
 // [gmurray] Commenting out this module as  migration is not supported for  2.5 EA. 
 // include::platform/assembly-aap-migration.adoc[leveloffset=+1]
 
-// [gmurray] Commenting out this module as  upgrade is not supported for  2.5 EA. 
-// include::platform/assembly-operator-upgrade.adoc[leveloffset=+1]
+
+include::platform/assembly-operator-upgrade.adoc[leveloffset=+1]
 
 include::platform/assembly-operator-add-execution-nodes.adoc[leveloffset=+1]
 include::platform/assembly-controller-resource-operator.adoc[leveloffset=+1]
+include::platform/assembly-appendix-operator-crs.adoc[leveloffset=+1]
