--- a/downstream/modules/platform/proc-operator-deploy-redis.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-redis.adoc
@@ -1,3 +1,5 @@
+[id="operator-deploy-redis"]
+
 = Deploying clustered Redis on {OperatorPlatformName}
 
 When you create an {PlatformNameShort} instance through the {OperatorPlatformNameShort}, standalone Redis is assigned by default. 
