Adding link to auto mesh section and note to intro

--- a/stories/topics/con-saas-monitoring.adoc
+++ b/stories/topics/con-saas-monitoring.adoc
@@ -6,5 +6,5 @@
 You can configure monitoring and hardening tools of your choice on the execution plane.
 You are responsible for their operation, functionality, and maintenance, ensuring they do not interfere with the execution plane's operation.
 
-Any additional workloads on the execution plane will require extra resources from the virtual machines or OpenShift clusters where the tools are deployed.
+Any additional workloads on the execution plane requires extra resources from the virtual machines or OpenShift clusters where the tools are deployed.
 Make sure to size resources accordingly to accommodate these additional requirements.
