--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -7,3 +7,7 @@ The Red{nbsp}Hat team handles the setup and maintenance of the {PlatformNameShor
 While Red{nbsp}Hat manages the control plane, the execution plane is spread across your domains using automation mesh hop nodes and execution nodes.
 For help with configuring execution nodes see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[Red Hat Ansible Automation Platform Automation Mesh for operator-based installations]
 
+[IMPORTANT]
+====
+Red{nbsp}Hat erases job logs every 30 days.
+====
