--- a/titles/saas-aws/master.adoc
+++ b/titles/saas-aws/master.adoc
@@ -8,7 +8,7 @@ include::attributes/attributes.adoc[]
 include::title-attributes.adoc[]
 
 [id="{ProjectNameID}-{context}"]
-= Red Hat Ansible Automation Platform Service on AWS
+= Ansible Automation Platform Service on AWS
 
 This document outlines the service definition and set up  for {SaaSonAWS}.
 
