Removed extraneous internal numeration from the errata.
Fixes an issue raised by Satoe.

--- a/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
@@ -47,13 +47,13 @@ This section lists the various errata advisories contained in this release.
 | {PlatformNameShort} 2.5-2 - October 7, 2024
 
 |
-link:https://errata.engineering.redhat.com/advisory/139519[RHBA-2024:139519-03 RPM]
+link:https://errata.engineering.redhat.com/advisory/139519[RPM]
 
-link:https://errata.engineering.redhat.com/advisory/139531[RHBA-2024:139531-04 Container (namespace-scoped)]
+link:https://errata.engineering.redhat.com/advisory/139531[Container (namespace-scoped)]
 
-link:https://errata.engineering.redhat.com/advisory/139532[RHBA-2024:139532-04 Container (cluster-scoped)]
+link:https://errata.engineering.redhat.com/advisory/139532[Container (cluster-scoped)]
 
-link:https://errata.engineering.redhat.com/advisory/xxxx[RHBA-2024:139623-01 Bundle Installer (VM and Containerized)]
+link:https://errata.engineering.redhat.com/advisory/xxxx[Bundle Installer (VM and Containerized)]
 
 |===
 
