AAP-16082 Added Verify SSL checkbox option

--- a/downstream/modules/eda/proc-eda-set-up-new-project.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-project.adoc
@@ -27,6 +27,13 @@ SCM URL:: HTTP[S] protocol address of a repository, such as GitHub or GitLab.
 You cannot edit the SCM URL after you create the project.
 ====
 Credential:: This field is optional. This is the token needed to utilize the SCM URL.
+Options:: The Verify SSL option is enabled by default. Enabling this option verifies the SSL with HTTPS when the project is imported.
++
+[NOTE]
+====
+You can disable this option if you have a local repository that uses self-signed certificates.
+====
+
 . Select btn:[Create project].
 
 Your project is now created and can be managed in the *Projects* screen.
