--- a/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
@@ -48,12 +48,12 @@ This section lists the various errata advisories contained in this release.
 
 |
 
-link:https://errata.engineering.redhat.com/advisory/139519[RHBA-2024:7756 RPM]
+link:https://errata.engineering.redhat.com/advisory/139519[RHBA-2024:7756]
 
-link:https://errata.engineering.redhat.com/advisory/139531[>RHBA-2024:7760 Container (namespace)]
+link:https://errata.engineering.redhat.com/advisory/139531[>RHBA-2024:7760]
 
-link:https://errata.engineering.redhat.com/advisory/139532[RHBA-2024:7766 Container (cluster)]
+link:https://errata.engineering.redhat.com/advisory/139532[RHBA-2024:7766]
 
-link:https://errata.engineering.redhat.com/advisory/xxxx[RHBA-2024:7810 Bundle Installer (VM and Containerized)]
+link:https://errata.engineering.redhat.com/advisory/xxxx[RHBA-2024:7810]
 
 |===
