--- a/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
@@ -48,12 +48,12 @@ This section lists the various errata advisories contained in this release.
 
 |
 
-link:https://errata.engineering.redhat.com/advisory/139519[RHBA-2024:7756]
+link:https://access.redhat.com/errata/RHBA-2024:7756[RHBA-2024:7756]
 
-link:https://errata.engineering.redhat.com/advisory/139531[>RHBA-2024:7760]
+link:https://access.redhat.com/errata/RHBA-2024:7760[>RHBA-2024:7760]
 
-link:https://errata.engineering.redhat.com/advisory/139532[RHBA-2024:7766]
+link:https://access.redhat.com/errata/RHBA-2024:7766[RHBA-2024:7766]
 
-link:https://errata.engineering.redhat.com/advisory/xxxx[RHBA-2024:7810]
+link:https://access.redhat.com/errata/RHBA-2024:7810[RHBA-2024:7810]
 
 |===
