--- a/downstream/modules/platform/con-aap-upgrades.adoc
+++ b/downstream/modules/platform/con-aap-upgrades.adoc
@@ -6,7 +6,7 @@
 
 Upgrading {PlatformNameShort} {PlatformVers}  involves downloading the installation package and then performing the following steps:
 
-* Set up your inventory to match your installation environment. See {LinkTopologies} for a list of example inventory files. 
+* Set up your inventory to match your installation environment. See link:{LinkTopologies} for a list of example inventory files. 
 * Run the {PlatformVers} installation program over your current {PlatformNameShort} installation.
 
 // [hherbly]: not sure we need the addt'l resources block? the xref goes to the next section of the document.
