fixes one error

--- a/downstream/modules/platform/con-aap-upgrade-planning.adoc
+++ b/downstream/modules/platform/con-aap-upgrade-planning.adoc
@@ -23,4 +23,5 @@ Before you begin the upgrade process, review the following considerations to pla
 * link:{URLCentralAuth}/assembly-gateway-licensing#proc-attaching-subscriptions[Attaching a subscription]
 * xref:platform/con-backup-aap.adoc[Backup and restore]
 * link:{URLControllerAdminGuide}/controller-clustering[Clustering]
+* link:{LinkPlanningGuide}
 
